<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_diary"
            android:icon="@mipmap/diary"
            android:title="@string/nav_diary" />
        <item
            android:id="@+id/nav_message"
            android:icon="@mipmap/message"
            android:title="@string/nav_message" />
        <item
            android:id="@+id/nav_fee"
            android:icon="@mipmap/fee"
            android:title="@string/nav_fee" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@mipmap/attendance"
            android:title="@string/nav_attendance" />
        <item
            android:id="@+id/nav_exam_schedule"
            android:icon="@mipmap/exam"
            android:title="@string/nav_exam_schedule" />
        <item
            android:id="@+id/nav_transport"
            android:icon="@mipmap/transport"
            android:title="@string/nav_transport" />
        <item
            android:id="@+id/nav_holiday"
            android:icon="@mipmap/holiday_list"
            android:title="@string/nav_holiday" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/profile"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@mipmap/changepassword"
            android:title="@string/nav_change_password" />
    </group>

    <item android:title="@string/other">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@mipmap/logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
