<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/select_camera"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnTakePicture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/take_picture"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnTakeVideo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/take_video"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="normal"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>